--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "https-proxy-agent": "^7.0.6",
+    "level": "^9.0.0",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "undici": "^7.3.0"
