--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.9",
     "agent-twitter-client": "^0.0.18",
+    "ai": "^4.1.24",
     "axios": "^1.7.9",
+    "commander": "^13.1.0",
     "dotenv": "^16.4.7",
     "https-proxy-agent": "^7.0.6",
     "level": "^9.0.0",
+    "node-fetch": "^3.3.2",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "undici": "^7.3.0"
